--- a/examples/simple_probe_CW.Rmd
+++ b/examples/simple_probe_CW.Rmd
@@ -30,7 +30,8 @@ simple_probe = scipy.io.loadmat(file_path)
 Get signals from Simple Probe:
 
 ```{python}
-intensities = np.swapaxes(simple_probe['d'], 0, 1)
+#intensities = np.swapaxes(r.testDataPython, 0, 1)
+intensities = r.testDataPython
 print("Intensity data shape: {}".format(intensities.shape))
 print("  number of channels: {}".format(intensities.shape[0]))
 print("  number of time points: {}".format(intensities.shape[1]))
@@ -41,7 +42,13 @@ print("  number of time points: {}".format(intensities.shape[1]))
 Get optical density changes relative to the average intensity of each channel:
 
 ```{python}
-dod = ns.intensities_to_od_changes(intensities)
+means = np.mean(np.absolute(intensities), axis=1)
+means = np.expand_dims(means, axis=1)
+delta_divs = np.absolute(intensities)/means
+delta_od = -np.log10(delta_divs)
+
+#dod = ns.intensities_to_od_changes(intensities)
+dod = r.testDataPython
 print("Delta OD shape: {}".format(dod.shape))
 ```
 
@@ -50,10 +57,14 @@ print("Delta OD shape: {}".format(dod.shape))
 Get channel names from Simple Probe:
 
 ```{python}
-channels = simple_probe['SD']['MeasList'][0, 0][:, :2].tolist()
-raw_ch_names = [str(ch).replace('[', '').replace(']', '').replace(', ', '-')
+#channels = simple_probe['SD']['MeasList'][0, 0][:, :2].tolist()
+channels = r.channelNames
+#raw_ch_names = [str(ch).replace('[', '').replace(']', '').replace(', ', '-')
                 for ch in channels]
+
+raw_ch_names = channels
 print("Channel names: {}".format(raw_ch_names))
+
 ```
 
 ---
@@ -61,10 +72,12 @@ print("Channel names: {}".format(raw_ch_names))
 Get channel wavelengths from Simple Probe:
 
 ```{python}
-wavelengths = simple_probe['SD']['Lambda'][0, 0][0].tolist()
-ch_high_wl = [wavelengths[0] for _ in range(int(len(raw_ch_names)/2))]
-ch_low_wl = [wavelengths[1] for _ in range(int(len(raw_ch_names)/2))]
-ch_wl = ch_high_wl + ch_low_wl
+#wavelengths = simple_probe['SD']['Lambda'][0, 0][0].tolist()
+#wavelengths = ["730","850"]
+#ch_high_wl = [wavelengths[0] for _ in range(int(len(raw_ch_names)/2))]
+#ch_low_wl = [wavelengths[1] for _ in range(int(len(raw_ch_names)/2))]
+#ch_wl = ch_high_wl + ch_low_wl
+ch_wl = r.ch_wl
 print("Channel wavelengths: {}".format(ch_wl))
 ```
 
@@ -83,7 +96,7 @@ print("Channel DPFs: {}".format(ch_dpf))
 Define source-detector distance for each channel:
 
 ```{python}
-unique_distance = 2.8  # cm
+unique_distance = 2.5  # cm
 ch_distances = [unique_distance for _ in enumerate(raw_ch_names)]
 print("Channel distances: {}".format(ch_distances))
 ```
@@ -93,8 +106,10 @@ print("Channel distances: {}".format(ch_distances))
 Get oxygenated and deoxygenated hemoglobin concentration changes (HbO and HbR) with the modified Beer-Lambert law (from Delpy et al., 1988):
 
 ```{python}
-data = ns.mbll(dod, raw_ch_names, ch_wl, ch_dpf, ch_distances,
-               unit='cm', table='wray')
+ex_inv = np.linalg.inv(ex)
+
+
+data = ns.mbll(dod, raw_ch_names, ch_wl, ch_dpf, ch_distances,unit='cm', table='wray')
 dc, ch_names, ch_types = data
 print("Delta HbO and HbR shape: {}".format(dc.shape))
 print("Channel names: {}".format(ch_names))
